<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/cancelIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_toLeftOf="@id/configuration_switch"
                android:layout_toRightOf="@id/cancelIV"
                android:fontFamily="@font/roboto_light"
                android:text="@string/title_server_setting"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"/>

            <Switch
                android:id="@+id/configuration_switch"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/app_url_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/hint_app_server"
                            android:imeOptions="actionNext"
                            android:inputType="textUri"
                            android:maxLines="1"
                            android:textSize="@dimen/general_text_size"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/security_url_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/hint_security_server"
                            android:imeOptions="actionNext"
                            android:inputType="textUri"
                            android:textSize="@dimen/general_text_size"
                            android:maxLines="1"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/security_realmname_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/hint_security_realmname"
                            android:imeOptions="actionDone"
                            android:inputType="textUri"
                            android:textSize="@dimen/general_text_size"
                            android:maxLines="1"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/saveServerBtn"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_log"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/text_save"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/resetServerBtn"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_log"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/text_reset"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>
